# discord-tts-bot

./: .env.default  .env.sample  .gitignore  CLAUDE.md  COMMIT_MESSAGE.md  IMPROVEMENTS_SUMMARY.md  READMD.md  README.md  TTS_QUEUE_IMPROVEMENT_PROPOSAL.md  code_review_report.md  docker-compose-release.yml  docker-compose.yaml  docker-compose.yml  saved.txt  solve.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: image-build.yml
app/: Dockerfile  app.py  app_improved.py  celerybeat_schedule.py  config.py  database.py  db.py  dict.txt  dict.txt.bak  exceptions.py  pyproject.toml  requirements.txt  tts_worker.py
