[project]
name = "discord-tts-bot"
version = "0.1.0"
description = "Discord TTS Bot"
requires-python = ">=3.8,<3.13"
dependencies = [
    "discord.py[voice]==2.3.2",
    "pydub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [] 
