[project]
name = "discord-tts-bot"
version = "0.1.0"
description = "Discord TTS Bot"
requires-python = ">=3.8,<3.13"
dependencies = [
    "discord.py[voice]>=2.6.4",
    "pydub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [] 
